# depthai-core-Template

./: .gitignore  CMakeLists.txt  README.md  setup_depthai_core.bash
examples/: stereo_hconcat.cpp
include/examples/: stereo_hconcat.hpp
